# lojinha-produtos-crud

./: .gitignore  CMakeLists.txt
include/: caixa.h  menuProduto.h  menucliente.h  produto.h
src/: caixa.c  main.c  menuProduto.c  menucliente.c  produto.c
test/: testProduto.c
teste/: rasc.c
